# grpc-rust-ms-template

./: .env  Cargo.toml  Dockerfile  Readme.md  build.rs  docker-compose.yml
migrations/: 20240716052044_init.sql
src/: main.rs
src/handlers/: hello_handler.rs  user_handler.rs
src/proto/: user.proto
src/repositories/: mod.rs  user_repository.rs
src/repositories/entity/: user.rs
src/services/: hello_service.rs  user_service.rs
