[package]
name = "grpc-rust-template"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
color-eyre = "0.6.3"
dotenv = "0.15.0"
futures = "0.3.30"
serde = { version = "1.0.204", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.38.0", features = ["full"] }
tonic = "0.12.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
prost = "0.13"

[build-dependencies]
tonic-build = "0.12"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "helloworld-server"
path = "src/main.rs"